# urban_eye

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/migrations/: env.py
src/migrations/versions/: 035f0719f0ce_.py  4b92598faf6a_initial_migration.py  6d388036f24e_fix_camera_id_in_video_model.py  7fdd7ea5ecd0_.py  844d2f5ff7ba_create_video_and_camera_models.py  e3022ee0b37c_fix_camera_time_of_day_field_type.py  eff753d1b7c2_.py
src/services/video/: metadata_extractor.py
src/urban_eye/: main.py  settings.py
src/urban_eye/api/routers/: auth.py  camera.py  filters.py  user.py  video.py
src/urban_eye/core/: celery_app.py  minio.py  redis.py  security.py
src/urban_eye/db/: database.py
src/urban_eye/models/: __init__.py  camera.py  user.py  video.py
src/urban_eye/repository/: camera.py  user.py  video.py
src/urban_eye/schemas/: camera.py  filters.py  user.py  video.py
src/urban_eye/services/caching/: redis_service.py
src/urban_eye/services/video/: metadata_extractor.py  minio_service.py  preview_generator.py  video_processor.py  video_upload_service.py
src/urban_eye/tasks/: video_tasks.py
