[tool.poetry]
name = "urban-eye"
version = "0.1.0"
description = ""
authors = ["Max Klyuchnikov <me.klyuchnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
