[tool.poetry]
name = "urban-eye"
version = "0.1.0"
description = ""
authors = ["Max Klyuchnikov <me.klyuchnikov@gmail.com>"]
readme = "README.md"

packages = [
    { include = "urban_eye", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
