[tool.poetry]
name = "urban-eye"
version = "0.1.0"
description = ""
authors = ["Max Klyuchnikov <me.klyuchnikov@gmail.com>"]
readme = "README.md"

packages = [
    { include = "urban_eye", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}
alembic = "^1.15.2"
passlib = "^1.7.4"
bcrypt = "^4.3.0"
python-dotenv = "^1.1.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
pydantic-settings = "^2.9.1"
boto3 = "^1.38.18"
opencv-python = "^4.11.0.86"
redis = "^6.1.0"
celery = "^5.5.2"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
